Added more to the Data Description.ipynb
just polished the information a little bit, cleaned it up and used headers to organize things neatly

--- a/Data Description.ipynb
+++ b/Data Description.ipynb
@@ -1,6 +1,30 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "296c9e59-8632-46ed-bddc-c01b025762fc",
+   "metadata": {},
+   "source": [
+    "# Data Description\n",
+    "#### Broad Question Prompt from assignment: \n",
+    "What player characteristics and behaviours are predictive of subscribing to the game-related newsletter?\n",
+    "\n",
+    "#### Specific Question I formulated: \n",
+    "Can player demographics and play behaviour (ex: total playtime, number of sessions, player type) predict whether a player subscribes to the newsletter?\n",
+    "\n",
+    "#### Dataset to be used: players.csv\n",
+    "since sessions.csv only has data relevant to playtime analyses, while I want to figure out how player newsletter subscription relates to variables like experience, time, and age in each player"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "51027933-b453-410d-8346-7533e0b28644",
+   "metadata": {},
+   "source": [
+    "## 0.0) Loading in the data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "de7a6d31-1a6b-4f0e-b24d-793908ce3cdf",
@@ -468,7 +492,7 @@
    "id": "c3c92f96-018a-4a52-822f-4e9404bd98c8",
    "metadata": {},
    "source": [
-    "**1) NUMBER OF OBSERVATIONS AND VARIABLES IN players.csv DATASET**"
+    "## 1) Numbers of observations/variables in the players.csv dataset"
    ]
   },
   {
@@ -507,7 +531,7 @@
    "id": "5e3ce247-868c-4e36-87b4-88385366c5ca",
    "metadata": {},
    "source": [
-    "**2) Variable names, types, and descriptions**"
+    "## 2) Variable names, types, and descriptions"
    ]
   },
   {
@@ -609,10 +633,31 @@
   },
   {
    "cell_type": "markdown",
+   "id": "086150c3-2e1b-4e22-963c-8e04a32a3167",
+   "metadata": {},
+   "source": [
+    "#### potential issues\n",
+    "- played_hours: may have extreme outliers\n",
+    "- Age: may have missing values?\n",
+    "- hashedEmail, name: no serious issue but irrelevant to data analysis\n",
+    "- may have inconsistent or duplicated entries\n",
+    "\n",
+    "#### possible hidden issues\n",
+    "- \"experience\" variable is highly biased depending on the person\n",
+    "- sampling bias: only includes players around a certain area\n",
+    "- playtime records may not be accurate due to issues with technology, for example, if playtime was recorded using built-in game timers\n",
+    "- is playtime defined by active play, or even idle/afk play?\n",
+    "\n",
+    "#### how the data were collected\n",
+    "- The dataset doesn't specify specificaclly how the data was collected. However, one can assume that the data was taken from activity reports/logs in-game, automatically recorded by the system"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "5cc369c0-0e46-41c4-a068-b7e00fbac0dd",
    "metadata": {},
    "source": [
-    "**3) Summary Statistics**|"
+    "## 3) Summary Statistics"
    ]
   },
   {
@@ -670,7 +715,7 @@
    "id": "cac72b52-27d7-457c-b9f3-1434819ba0c7",
    "metadata": {},
    "source": [
-    "**3.1) Means of each numeric variable**"
+    "## 3.1) Means of each numeric variable"
    ]
   },
   {
@@ -742,14 +787,6 @@
    "source": [
     "The average hours played is 5.85 hours, and the average age is 21.14 years."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1c6a3a66-eb78-48b8-9e14-d2d544ae59ea",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
