Created the final file to submit
completed all points necesarry for the project!! still needs some polishing.
also, change the names of the github stuff. so cringe

--- a/Data Description.ipynb
+++ b/Data Description.ipynb
@@ -67,35 +67,38 @@
        ".list-inline>li {display: inline-block}\n",
        ".list-inline>li:not(:last-child)::after {content: \"\\00b7\"; padding: 0 .5ex}\n",
        "</style>\n",
-       "<ol class=list-inline><li>'Figuring it out.ipynb'</li><li>'Individual Planning Project'</li><li>'loadingstuff.ipynb'</li><li>'players.csv'</li><li>'README.md'</li><li>'sessions.csv'</li><li>'Untitled.ipynb'</li></ol>\n"
+       "<ol class=list-inline><li>'Data Description.ipynb'</li><li>'Exploring relationships in data.ipynb'</li><li>'Individual Planning Project'</li><li>'players.csv'</li><li>'README.md'</li><li>'sessions.csv'</li><li>'untitled.txt'</li></ol>\n"
       ],
       "text/latex": [
        "\\begin{enumerate*}\n",
-       "\\item 'Figuring it out.ipynb'\n",
+       "\\item 'Data Description.ipynb'\n",
+       "\\item 'Exploring relationships in data.ipynb'\n",
        "\\item 'Individual Planning Project'\n",
-       "\\item 'loadingstuff.ipynb'\n",
        "\\item 'players.csv'\n",
        "\\item 'README.md'\n",
        "\\item 'sessions.csv'\n",
-       "\\item 'Untitled.ipynb'\n",
+       "\\item 'untitled.txt'\n",
        "\\end{enumerate*}\n"
       ],
       "text/markdown": [
-       "1. 'Figuring it out.ipynb'\n",
-       "2. 'Individual Planning Project'\n",
-       "3. 'loadingstuff.ipynb'\n",
+       "1. 'Data Description.ipynb'\n",
+       "2. 'Exploring relationships in data.ipynb'\n",
+       "3. 'Individual Planning Project'\n",
        "4. 'players.csv'\n",
        "5. 'README.md'\n",
        "6. 'sessions.csv'\n",
-       "7. 'Untitled.ipynb'\n",
+       "7. 'untitled.txt'\n",
        "\n",
        "\n"
       ],
       "text/plain": [
-       "[1] \"Figuring it out.ipynb\"       \"Individual Planning Project\"\n",
-       "[3] \"loadingstuff.ipynb\"          \"players.csv\"                \n",
-       "[5] \"README.md\"                   \"sessions.csv\"               \n",
-       "[7] \"Untitled.ipynb\"             "
+       "[1] \"Data Description.ipynb\"               \n",
+       "[2] \"Exploring relationships in data.ipynb\"\n",
+       "[3] \"Individual Planning Project\"          \n",
+       "[4] \"players.csv\"                          \n",
+       "[5] \"README.md\"                            \n",
+       "[6] \"sessions.csv\"                         \n",
+       "[7] \"untitled.txt\"                         "
       ]
      },
      "metadata": {},
@@ -175,12 +178,27 @@
       "\u001b[90m 8\u001b[39m Amateur    FALSE     1d2371d8a35c8831034b25b…          0   Emer… Male      21\n",
       "\u001b[90m 9\u001b[39m Amateur    TRUE      8b71f4d66a38389b7528bb3…          0.1 Nata… Male      47\n",
       "\u001b[90m10\u001b[39m Veteran    TRUE      bbe2d83de678f519c4b3daa…          0   Nyla  Female    22\n",
-      "\u001b[90m# ℹ 186 more rows\u001b[39m\n"
+      "\u001b[90m# ℹ 186 more rows\u001b[39m\n",
+      "\u001b[90m# A tibble: 1,535 × 5\u001b[39m\n",
+      "   hashedEmail         start_time end_time original_start_time original_end_time\n",
+      "   \u001b[3m\u001b[90m<chr>\u001b[39m\u001b[23m               \u001b[3m\u001b[90m<chr>\u001b[39m\u001b[23m      \u001b[3m\u001b[90m<chr>\u001b[39m\u001b[23m                  \u001b[3m\u001b[90m<dbl>\u001b[39m\u001b[23m             \u001b[3m\u001b[90m<dbl>\u001b[39m\u001b[23m\n",
+      "\u001b[90m 1\u001b[39m bfce39c89d6549f2bb… 30/06/202… 30/06/2…       1\u001b[4m7\u001b[24m\u001b[4m1\u001b[24m\u001b[4m9\u001b[24m770\u001b[4m0\u001b[24m\u001b[4m0\u001b[24m\u001b[4m0\u001b[24m000     1\u001b[4m7\u001b[24m\u001b[4m1\u001b[24m\u001b[4m9\u001b[24m770\u001b[4m0\u001b[24m\u001b[4m0\u001b[24m\u001b[4m0\u001b[24m000\n",
+      "\u001b[90m 2\u001b[39m 36d9cbb4c6bc0c1a69… 17/06/202… 17/06/2…       1\u001b[4m7\u001b[24m\u001b[4m1\u001b[24m\u001b[4m8\u001b[24m670\u001b[4m0\u001b[24m\u001b[4m0\u001b[24m\u001b[4m0\u001b[24m000     1\u001b[4m7\u001b[24m\u001b[4m1\u001b[24m\u001b[4m8\u001b[24m670\u001b[4m0\u001b[24m\u001b[4m0\u001b[24m\u001b[4m0\u001b[24m000\n",
+      "\u001b[90m 3\u001b[39m f8f5477f5a2e53616a… 25/07/202… 25/07/2…       1\u001b[4m7\u001b[24m\u001b[4m2\u001b[24m\u001b[4m1\u001b[24m930\u001b[4m0\u001b[24m\u001b[4m0\u001b[24m\u001b[4m0\u001b[24m000     1\u001b[4m7\u001b[24m\u001b[4m2\u001b[24m\u001b[4m1\u001b[24m930\u001b[4m0\u001b[24m\u001b[4m0\u001b[24m\u001b[4m0\u001b[24m000\n",
+      "\u001b[90m 4\u001b[39m bfce39c89d6549f2bb… 25/07/202… 25/07/2…       1\u001b[4m7\u001b[24m\u001b[4m2\u001b[24m\u001b[4m1\u001b[24m880\u001b[4m0\u001b[24m\u001b[4m0\u001b[24m\u001b[4m0\u001b[24m000     1\u001b[4m7\u001b[24m\u001b[4m2\u001b[24m\u001b[4m1\u001b[24m880\u001b[4m0\u001b[24m\u001b[4m0\u001b[24m\u001b[4m0\u001b[24m000\n",
+      "\u001b[90m 5\u001b[39m 36d9cbb4c6bc0c1a69… 25/05/202… 25/05/2…       1\u001b[4m7\u001b[24m\u001b[4m1\u001b[24m\u001b[4m6\u001b[24m650\u001b[4m0\u001b[24m\u001b[4m0\u001b[24m\u001b[4m0\u001b[24m000     1\u001b[4m7\u001b[24m\u001b[4m1\u001b[24m\u001b[4m6\u001b[24m650\u001b[4m0\u001b[24m\u001b[4m0\u001b[24m\u001b[4m0\u001b[24m000\n",
+      "\u001b[90m 6\u001b[39m bfce39c89d6549f2bb… 23/06/202… 23/06/2…       1\u001b[4m7\u001b[24m\u001b[4m1\u001b[24m\u001b[4m9\u001b[24m160\u001b[4m0\u001b[24m\u001b[4m0\u001b[24m\u001b[4m0\u001b[24m000     1\u001b[4m7\u001b[24m\u001b[4m1\u001b[24m\u001b[4m9\u001b[24m160\u001b[4m0\u001b[24m\u001b[4m0\u001b[24m\u001b[4m0\u001b[24m000\n",
+      "\u001b[90m 7\u001b[39m fd6563a4e0f6f42735… 15/04/202… 15/04/2…       1\u001b[4m7\u001b[24m\u001b[4m1\u001b[24m\u001b[4m3\u001b[24m170\u001b[4m0\u001b[24m\u001b[4m0\u001b[24m\u001b[4m0\u001b[24m000     1\u001b[4m7\u001b[24m\u001b[4m1\u001b[24m\u001b[4m3\u001b[24m170\u001b[4m0\u001b[24m\u001b[4m0\u001b[24m\u001b[4m0\u001b[24m000\n",
+      "\u001b[90m 8\u001b[39m ad6390295640af1ed0… 21/09/202… 21/09/2…       1\u001b[4m7\u001b[24m\u001b[4m2\u001b[24m\u001b[4m6\u001b[24m880\u001b[4m0\u001b[24m\u001b[4m0\u001b[24m\u001b[4m0\u001b[24m000     1\u001b[4m7\u001b[24m\u001b[4m2\u001b[24m\u001b[4m6\u001b[24m890\u001b[4m0\u001b[24m\u001b[4m0\u001b[24m\u001b[4m0\u001b[24m000\n",
+      "\u001b[90m 9\u001b[39m 96e190b0bf3923cd8d… 21/06/202… 21/06/2…       1\u001b[4m7\u001b[24m\u001b[4m1\u001b[24m\u001b[4m8\u001b[24m940\u001b[4m0\u001b[24m\u001b[4m0\u001b[24m\u001b[4m0\u001b[24m000     1\u001b[4m7\u001b[24m\u001b[4m1\u001b[24m\u001b[4m8\u001b[24m940\u001b[4m0\u001b[24m\u001b[4m0\u001b[24m\u001b[4m0\u001b[24m000\n",
+      "\u001b[90m10\u001b[39m 36d9cbb4c6bc0c1a69… 16/05/202… 16/05/2…       1\u001b[4m7\u001b[24m\u001b[4m1\u001b[24m\u001b[4m5\u001b[24m840\u001b[4m0\u001b[24m\u001b[4m0\u001b[24m\u001b[4m0\u001b[24m000     1\u001b[4m7\u001b[24m\u001b[4m1\u001b[24m\u001b[4m5\u001b[24m840\u001b[4m0\u001b[24m\u001b[4m0\u001b[24m\u001b[4m0\u001b[24m000\n",
+      "\u001b[90m# ℹ 1,525 more rows\u001b[39m\n"
      ]
     }
    ],
    "source": [
-    "print(players_original, rows = 10)"
+    "print(players_original, rows = 10)\n",
+    "print(sessions_original, rows = 10)"
    ]
   },
   {
@@ -195,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "id": "464512f0-a392-4159-8745-fcf5c4c15136",
    "metadata": {},
    "outputs": [
@@ -497,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 7,
    "id": "4245b0f8-e4d1-4261-8b23-fb04bf832a2d",
    "metadata": {},
    "outputs": [
@@ -536,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 8,
    "id": "8d730837-9cdc-4161-8927-db726c8daa4b",
    "metadata": {},
    "outputs": [
@@ -662,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 9,
    "id": "6176c312-bffa-4af9-891f-5b1065bd62e0",
    "metadata": {},
    "outputs": [
@@ -720,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 10,
    "id": "5ff1838b-da8b-4795-943c-c09118410eb0",
    "metadata": {},
    "outputs": [
